# content-moderation-mlops

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
Scripts/: run.sh
app/: artifacts.py  logger.py  main.py  predictor.py  schemas.py
app/ui/static/: app.css
app/ui/templates/: base.html  index.html
app/ui/templates/partials/: error.html  prediction.html  status.html
config/: settings.py
monitoring/: prometheus.yml
pipeline/: extract.py  preprocessing.py  save_model.py  test_evaluate.py  train.py  utils.py
tests/: test_api.py
