[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "content-moderation-mlops"
version = "0.1.0"
description = "Content moderation (spam/ham) API + ML pipeline with FastAPI, sklearn, MLflow, and monitoring."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.29.0",
  "gunicorn==22.0.0",
  "jinja2==3.1.4",
  "python-multipart==0.0.9",
  "scikit-learn==1.4.2",
  "pandas==2.2.2",
  "joblib==1.4.2",
  "mlflow==2.13.0",
  "pydantic==2.7.1",
  "numpy==1.26.4",
  "slowapi==0.1.9",
]

[project.optional-dependencies]
dev = [
  "pytest==8.2.0",
  "httpx==0.27.0",
  "ruff==0.12.4",
  "bandit==1.8.6",
  "pip-audit==2.9.0",
  "mypy==1.17.1",
]

[tool.setuptools.packages.find]
include = ["app*", "pipeline*", "config*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
